--- a/src/app/components/pages/contact-us/contact-us.component.html
+++ b/src/app/components/pages/contact-us/contact-us.component.html
@@ -1,7 +1,7 @@
 <app-stars-background></app-stars-background>
 <app-lines-background></app-lines-background>
 
-<div class="main row justify-content-center align-items-center p-5">
+<div class="main row justify-content-center align-items-center p-lg-5 p-sm-2">
   <!-- Left Side (Form Section) -->
   <div class="main-side col-7 d-flex flex-column justify-content-start align-items-start p-0">
     <h1>Contactez-nous</h1>
