--- a/src/app/components/pages/home/hero-section/hero-section.component.html
+++ b/src/app/components/pages/home/hero-section/hero-section.component.html
@@ -5,17 +5,29 @@
     <div class="col-12 col-md-8 d-flex flex-column order-1 order-md-1">
         <div class="welcome mb-3 d-flex align-items-center justify-content-start text-start" style="flex-wrap: nowrap;">
             <div class="welcome-img me-2">
-                <img src="images/welcome.png" alt="welcome" style="width:40px; height:auto;">
+                <img class="img-fluid" src="images/welcome.png" alt="welcome" width="100" height="100">
             </div>
             <p class="welcome-message mb-0">
-                Bienvenue dans <span style="color: rgba(255, 0, 110, 1);;">l’univers magique de Patarif</span>
+                Bienvenue dans l’univers magique de <span style="color: rgba(255, 0, 110, 1);;">Patarif</span>
             </p>
         </div>
 
-        <h1 class="hero-title text-start"> <span class="line1"> Le <span class="break-after">meilleur</span> endroit
-            </span><br> <span class="line2"> <span style="color: rgba(100, 134, 255, 1);" class="learn">Étudier </span>
-                <span class="break-after">et </span> <span style="color: rgba(251, 86, 100, 1);" class="play">Jouer
-                </span> </span><br> <span class="line3">pour les enfants</span> </h1>
+        <h1 class="hero-title text-start">
+            <span class="line1">
+                Le <span class="break-after">meilleur</span> endroit 
+            </span>
+            <br>
+            <span class="line2">
+                <span class="learn" style="color: rgba(100, 134, 255, 1);">Étudier </span>
+                <span class="break-after">et</span>
+                <span class="play" style="color: rgba(251, 86, 100, 1);">Jouer </span>
+            </span>
+            <br>
+            <span class="line3">
+                pour les <span class="last-word">enfants </span>
+            </span>
+        </h1>
+
         <img class="img-fluid learn-line" src="images/learnLine.png" alt="line">
         <img class="img-fluid play-line" src="images/playLine.png" alt="line">
     </div>
