--- a/src/app/components/pages/shop/product-card/product-card.component.html
+++ b/src/app/components/pages/shop/product-card/product-card.component.html
@@ -35,7 +35,7 @@
     <h2 class="product-title">{{ title }}</h2>
     <p class="product-price">{{ price }}$</p>
     <button class="btn btn-primary add-to-cart">
-        Add to Cart <i class="bi bi-cart"></i>
+    Voir les détails <i class="bi bi-box-arrow-up-right"></i>
     </button>
 
 </div>
