--- a/src/app/components/pages/home/hero-section/hero-section.component.css
+++ b/src/app/components/pages/home/hero-section/hero-section.component.css
@@ -34,9 +34,6 @@ body {
     width: 16%;
 }
 
-* {
-    /* border: red 1px solid; */
-}
 
 .wand img {
     object-fit: contain;
@@ -51,11 +48,20 @@ body {
     animation: fadeInFromTop 1s ease-out 0.4s both;
 } */
 
-.welcome-img img {
-    width: 50%;
-    height: auto;
-    animation: spin 5s linear infinite;
+.welcome-img {
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+}
 
+.welcome-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    animation: spin 5s linear infinite;
 }
 
 @keyframes spin {
@@ -81,11 +87,6 @@ body {
     font-weight: 600;
     font-size: clamp(2rem, 5.5vw, 5.2rem);
     animation: fadeInFromTop 1s ease-out 0.6s both;
-}
-
-/* default: nothing happens */
-.break-after::after {
-    content: "";
 }
 
 .logo {
@@ -150,16 +151,16 @@ body {
 
 /* المكان الأساسي */
 .learn-line {
-    left: 6%;
+    left: 8%;
 }
 
 .play-line {
-    left: 41%;
+    left: 38%;
 }
 
 .lets-play {
     position: absolute;
-    top: 70%;
+    top: 72%;
     left: 33%;
     width: fit-content;
 
@@ -322,10 +323,6 @@ body {
         padding-right: 0;
     }
 
-    .welcome-img img {
-        width: 5%;
-        height: auto;
-    }
 
     .welcome-message {
         font-size: 1rem;
@@ -334,7 +331,7 @@ body {
 
     .hero-title {
         font-weight: lighter;
-        font-size: 2.5rem;
+        font-size: 3.5rem;
     }
 
     .break-after::after {
@@ -343,7 +340,9 @@ body {
         white-space: pre;
         display: inline;
     }
-
+.last-word{
+    display: block;
+}
     .logo,
     .wand,
     .play-line,
@@ -411,36 +410,66 @@ body {
 
 /* Tablet (481px - 768px) */
 @media (min-width: 481px) and (max-width: 768px) {
-    /* .hero {
-        padding: 30px;
-        text-align: center;
+  .logo,
+    .wand,
+    .play-line,
+    .learn-line {
+        display: none;
     }
 
-    .logo {
-        display: block;
-        margin: 20px auto;
-        width: 60%;
+    .lets-play {
+        left: 4%;
+        top: 85%;
+        width: 30%;
+    }
+    .collection-item {
+        font-size: 1rem;
+        padding: 5px 16px;
     }
 
     .collection {
-        left: 70%;
-        top: 77%;
-    }
-    .wand {
-        transform: translateX(-50%);
+        top: 80%;
         left: 50%;
     }
-    .lets-play {
-        left: 4%;
+
+    .enjoy {
+        top: 0;
+        left: 0;
     }
-    .collection-item {
-        padding: 7px 16px;
-        margin: -30px;
+
+    .book {
+        top: 0;
+        left: 80px;
     }
-    .learn-line {
-        left: 30%;
+
+    .stories {
+        top: 40px;
+        left: 40px;
     }
-    .play-line {
-        left: 64%;
-    } */
+
+    .love {
+        top: 40px;
+        left: 120px;
+    }
+
+    .learning {
+        top: 80px;
+        left: 0;
+    }
+
+    .star {
+        top: 80px;
+        left: 80px;
+    }
+
+    .game {
+        top: 120px;
+        left: 40px;
+    }
+
+    .play-collection-item {
+        top: 120px;
+        left: 120px;
+    }
+
 }
