--- a/src/app/components/pages/shop/cart/cart.component.html
+++ b/src/app/components/pages/shop/cart/cart.component.html
@@ -48,7 +48,7 @@
             <div class="row mt-3">
                 <div class="col-3">
                     <button (click)="showContactInfo = false" type="button"
-                        class="btn btn-outline-secondary w-100">Annuler</button>
+                        class="btn btn-outline-secondary close w-100">Annuler</button>
                 </div>
                 <div class="col-9">
                     <button type="submit" class="btn btn-primary w-100">Enregistrer</button>
