--- a/src/app/components/pages/shop/product-card/product-card.component.css
+++ b/src/app/components/pages/shop/product-card/product-card.component.css
@@ -11,13 +11,12 @@
     padding: 16px 18px;
     width: 240px;
     height: 360px;
-    /* margin: 0 12px; */
-    /* min-height: auto; */
     gap: 8px;
     transform: translateY(0);
     transition: background 0.2s, transform 0.2s;
     cursor: normal;
     position: relative;
+    margin: 0 12px;
 }
 
 .is-salled {
@@ -48,7 +47,11 @@
     border-radius: 8px;
     overflow: hidden;
 }
-
+.card-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 .title {
     font-family: var(--mainFont);
     font-weight: 900;
@@ -103,7 +106,7 @@ button {
 }
 
 .add-to-cart {
-    visibility: hidden;
+    /* visibility: hidden; */
     margin-top: auto;
     padding: 8px 18px;
     font-size: clamp(0.7rem, 1vw, 1rem);
@@ -118,12 +121,17 @@ button {
     cursor: pointer;
 }
 
-.add-to-cart:hover {
+.product-card:hover .add-to-cart{
+        background: #FF006E;
+    color: #fff;
+    border: transparent 1px solid;
+}
+/* .add-to-cart:hover {
     background: #FF006E;
     color: #fff;
     border: transparent 1px solid;
 
-}
+} */
 
 
 /* half star */
