--- a/src/app/components/pages/shop/product-details/product-details.component.html
+++ b/src/app/components/pages/shop/product-details/product-details.component.html
@@ -12,23 +12,23 @@
 <div class="content">
 
     <!-- ✅ Loading Spinner -->
-  <app-loading *ngIf="loading"></app-loading>
+    <app-loading *ngIf="loading"></app-loading>
 
     <ng-container *ngIf="!loading">
 
         <div class="row card-info" id="myTargetDiv">
             <div class="imgs col-12 col-md-6">
                 <!-- main image -->
-                <div class="main-img">
-                    <div class="collection">
-                        <button class="add-to-favourite" (click)="addToFav()">
-                            <i class="bi" [ngClass]="isFavourite ? 'bi-heart-fill' : 'bi-heart'"></i>
-                        </button>
-                        <!-- <div *ngIf="!isProductStockAvailable" class="is-available">salled</div> -->
-                    </div>
+                <div class="main-img" #mainImgWrapper (mousemove)="onImageMouseMove($event)"
+                    (mouseenter)="onImageEnter()" (mouseleave)="onImageLeave()">
 
-                    <img class="img-fluid" [src]="selectedImage" alt="product details">
+
+                    <img #mainImg class="img-fluid" [src]="selectedImage" alt="product details">
+
+                    <!-- magnifier lens -->
+                    <div class="magnifier" [ngStyle]="magnifierStyle"></div>
                 </div>
+
                 <!-- other images -->
                 <div class="other-imgs">
                     <img *ngFor="let img of product?.images" class="img-fluid" [src]="img" alt="product details"
@@ -71,7 +71,7 @@
                 <div class="price">
                     <h2 class="old-price">{{product?.price}}$</h2>
                     <h2 class="final-price">{{convertFinalPriceTo99(product?.final_price)}}$</h2>
-                    <div class="offer">
+                    <div *ngIf="calcOffer(product?.final_price, product?.price) != '0'" class="offer">
                         <p>offer {{calcOffer(product?.final_price, product?.price)}}%</p>
                     </div>
                 </div>
@@ -104,7 +104,8 @@
 
                 </div>
 
-                <button (click)="handleAddToCart($event)" *ngIf="selectedSize != null" class="btn btn-primary">Add to cart
+                <button (click)="handleAddToCart($event)" *ngIf="selectedSize != null" class="btn btn-primary">Add to
+                    cart
                     <span></span></button>
                 <div *ngIf="selectedSize == null" class="btn btn-primary-outline">select <span *ngIf="selectedColor
              == null">[color] </span> <span *ngIf="selectedSize == null">[size]</span></div>
