--- a/src/app/components/pages/shop/product-card/product-card.component.css
+++ b/src/app/components/pages/shop/product-card/product-card.component.css
@@ -122,6 +122,7 @@ button {
 }
 
 .product-card:hover .add-to-cart{
+    /* visibility: visible; */
         background: #FF006E;
     color: #fff;
     border: transparent 1px solid;
