--- a/src/app/components/pages/home/characters-home/slider-characters-home/slider-characters-home.component.html
+++ b/src/app/components/pages/home/characters-home/slider-characters-home/slider-characters-home.component.html
@@ -1,5 +1,6 @@
-
-<div *ngIf="designType === 'carousel'" class="games-carousel-container">
+  <app-loading *ngIf="isLoading"></app-loading>
+<div *ngIf="!isLoading">
+<div  *ngIf="designType === 'carousel'" class="games-carousel-container">
   <div class="carousel">
     <div class="cards">
       <div
@@ -35,4 +36,4 @@
     </button>
   </div>
 </div>
-  
+  </div>
