--- a/src/app/components/account/login/login.component.html
+++ b/src/app/components/account/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column justify-content-center align-items-center w-100 h-100">
-  <img class="logo" src="images/logo-patarif.png" alt="logo" width="100">
+   <a href="/home"><img class="logo" src="images/logo-patarif.png" alt="logo" width="100"></a> 
 
   <div class="container">
     <div class="gradient-border-wrapper w-100">
