--- a/src/app/components/account/signup/signup.component.html
+++ b/src/app/components/account/signup/signup.component.html
@@ -1,6 +1,6 @@
 <!-- register.component.html -->
 <div class="container">
-  <img class="logo" src="images/logo-patarif.png" alt="logo" width="100">
+ <a href="/home"><img class="logo" src="images/logo-patarif.png" alt="logo" width="100"></a> 
   <div class="gradient-border-wrapper w-100">
     <div class="row shadow-lg overflow-hidden w-100">
 
